# python-lame-ctypes

./: README.md  pyproject.toml
lame_ctypes/: __init__.py  _dll.py  _stdarg_ctypes.py  lame_ctypes.py
samples/: README.md  decodemp3.py
tests/: test_lame_ctypes.py
