[tool.poetry]
name = "lame-ctypes"
version = "0.1.3"
description = "Just Lame ctypes binding."
authors = ["sengokyu <sengokyu+gh@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sengokyu/python-lame-ctypes"
repository = "https://github.com/sengokyu/python-lame-ctypes.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
